Fix Box borders not showing issue

--- a/client/src/scss/react_components/Box.scss
+++ b/client/src/scss/react_components/Box.scss
@@ -2,6 +2,7 @@
     box-sizing: border-box;
     width: 100px;
     height: 100px;
-    border-radius: 10px;
+    border-width: 1px;
     border-color: black;
+    border-style: solid;
 }
